--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body {
 
 .main-image {
   grid-area: image;
-  background-image: url("https://picsum.photos/id/0/500/400");
+  background-image: url("https://picsum.photos/id/0/400/400");
   width: 100%;
   height: 100%;
   background-position: top center;
@@ -30,7 +30,44 @@ body {
 
 .sidebar {
   grid-area: sidebar;
-  background-color: purple;
+  background-color: hsl(265, 100%, 86%);
+  border-left: 1px solid hsl(265, 100%, 56%);
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.sidebar-item {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background-color: hsl(265, 100%, 86%);
+  padding: 1rem;
+  position: relative;
+  transition: background-color 150ms;
+}
+
+.sidebar-item:hover,
+.sidebar-item:focus {
+  background-color: hsl(265, 100%, 76%);
+}
+
+.sidebar-item.active {
+  background-color: hsl(265, 100%, 70%);
+}
+
+.sidebar-item::after {
+  content: "";
+  position: absolute;
+  width: 80%;
+  left: 10%;
+  bottom: 0;
+  height: 1px;
+  background-color: hsl(265, 100%, 46%);
+}
+
+.sidebar-item:last-child::after {
+  display: none;
 }
 
 .slider-container {
